@@ -1,3 +1,8 @@
+1999-06-02  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
+
+	* Show.pm (acquire): check the object type passed
+	* cleanup logs
+
 1999-02-05  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
 
 	* Show.pm :
